# sylk-bot

./: .gitignore  Cargo.toml  README.md  config.toml  shell.nix
src/: lib.rs  main.rs
src/commands/: general.rs  info.rs  mallet.rs  mod.rs  name.rs  pin.rs  ping.rs  rename.rs  role.rs  vote.rs
src/utils/: chatbridge.rs  cloud.rs  error.rs  mod.rs
src/utils/mc/: bridge.rs  interface.rs  mcd.rs  mod.rs  taurus.rs
