[package]
name = "sylk-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
toml = "0.4.2"
firestore = "0.11"
async-trait = "0.1.57"
eventual = "0.1.7"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
